[package]
name = "bevy_get_either"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.13", default-features = false }

[lints.rust]
missing_docs = "forbid"

[lints.clippy]
type_complexity = "allow"
