[package]
name = "bevy_two_entities"
version = "0.4.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "A few convenience traits for working with Bevy Queries"
repository = "https://github.com/rparrett/bevy_two_entities"
homepage = "https://github.com/rparrett/bevy_two_entities"
documentation = "https://docs.rs/bevy_two_entities"
keywords = ["bevy", "gamedev"]
categories = ["game-development"]
readme = "README.md"
exclude = [".github"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["std"]
std = ["bevy/std"]
libm = ["bevy/libm"]

[dependencies]
bevy = { version = "0.16.0", default-features = false }

[dev-dependencies]
# bevy_state is needed for tests
bevy = { version = "0.16.0", default-features = false, features = [
    "bevy_state",
] }

[lints.rust]
missing_docs = "forbid"

[lints.clippy]
type_complexity = "allow"
